# py-video-make-yt

./: .gitignore  Makefile  README.md  __main__.py  pyproject.toml
.github/workflows/: tests.yml
docs/: AGENTS.md  README.md
memory-bank/: 20260421_1638_files-tasks-done.md  20260421_1652_files-tasks-done.md  20260421_2050_files-tasks-done.md  20260421_2102_files-tasks-done.md  20260421_2115_files-tasks-done.md  20260423_0855_files-tasks-done.md  20260423_1013_files-tasks-done.md  20260423_1045_files-tasks-done.md  20260423_1149_files-tasks-done.md  20260423_1300_files-tasks-done.md  20260423_1315_files-tasks-done.md  20260423_1330_files-tasks-done.md  20260423_1345_files-tasks-done.md  20260423_1400_files-tasks-done.md  20260426_1342_files-tasks-done.md
tests/: conftest.py  test_cli.py  test_config.py  test_encoder.py  test_integration.py
video_maker/: __main__.py  cli.py  config.py  encoder.py  settings.py
